creata struttura di base html + classi CSS

--- a/index.html
+++ b/index.html
@@ -6,11 +6,41 @@
     <!-- Link al CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- /Link al CSS -->
-    
+
     <title>Airbnb clone</title>
   </head>
   <body>
-    INIZIO PROGETTO - PROVA SFONDO
+
+    <!-- Container content -->
+    <div class="container-content">
+      <div class="container-all-cities">
+        <!-- Container city -->
+        <div class="container-city">
+          <!-- Nome città sovraimpressione -->
+          <div class="badge">
+            ROMA
+          </div>
+          <!-- /Nome città sovraimpressione -->
+          <!-- layer scuro in sovraimpressione -->
+          <div class="layer-transparent">
+
+          </div>
+          <!-- /layer scuro in sovraimpressione -->
+        </div>
+        <!-- /Container city -->
+
+        CITTA 2 + CITTA 3
+    </div>
+
+    </div>
+    <!-- /Container content -->
+
+    <!-- Container debug -->
+    <div class="container-debug">
+        DEBUG
+      <img src=./img/reference-small.png alt="immagine di debug">
+    </div>
+    <!-- /Container debug -->
 
   </body>
 </html>
