inserite immagini di prova, creazione struttura sito

--- a/index.html
+++ b/index.html
@@ -16,9 +16,40 @@
       <div class="container-all-cities">
         <!-- Container city -->
         <div class="container-city">
+          <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
           <!-- Nome città sovraimpressione -->
           <div class="badge">
-            ROMA
+            <!-- ROMA -->
+          </div>
+          <!-- /Nome città sovraimpressione -->
+          <!-- layer scuro in sovraimpressione -->
+          <div class="layer-transparent">
+
+          </div>
+          <!-- /layer scuro in sovraimpressione -->
+        </div>
+        <!-- /Container city -->
+        <!-- Container city -->
+        <div class="container-city">
+          <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
+          <!-- Nome città sovraimpressione -->
+          <div class="badge">
+            <!-- ROMA -->
+          </div>
+          <!-- /Nome città sovraimpressione -->
+          <!-- layer scuro in sovraimpressione -->
+          <div class="layer-transparent">
+
+          </div>
+          <!-- /layer scuro in sovraimpressione -->
+        </div>
+        <!-- /Container city -->
+        <!-- Container city -->
+        <div class="container-city">
+          <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
+          <!-- Nome città sovraimpressione -->
+          <div class="badge">
+            <!-- ROMA -->
           </div>
           <!-- /Nome città sovraimpressione -->
           <!-- layer scuro in sovraimpressione -->
@@ -29,7 +60,6 @@
         </div>
         <!-- /Container city -->
 
-        CITTA 2 + CITTA 3
     </div>
 
     </div>
