aggiunto overlay su immagine città, aggiunto nome città in sovraimpressione

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
           <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
           <!-- Nome città sovraimpressione -->
           <div class="badge">
-            <!-- ROMA -->
+            <span> ROMA </span>
           </div>
           <!-- /Nome città sovraimpressione -->
           <!-- layer scuro in sovraimpressione -->
           <div class="layer-transparent">
-
+            sono il layer trasparente
           </div>
           <!-- /layer scuro in sovraimpressione -->
         </div>
         <!-- /Container city -->
+
         <!-- Container city -->
         <div class="container-city">
           <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
