modifiche minori di grafica

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- Container city -->
         <div class="container-city">
-          <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
+          <img class="img-city" src="./img/roma2.jpg" alt="Immagine Roma">
           <!-- Nome città sovraimpressione -->
           <div class="badge">
             <!-- ROMA -->
@@ -47,7 +47,7 @@
         <!-- /Container city -->
         <!-- Container city -->
         <div class="container-city">
-          <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
+          <img class="img-city" src="./img/roma3.jpg" alt="Immagine Roma">
           <!-- Nome città sovraimpressione -->
           <div class="badge">
             <!-- ROMA -->
@@ -67,10 +67,10 @@
     <!-- /Container content -->
 
     <!-- Container debug -->
-    <div class="container-debug">
-        DEBUG
+    <!-- <div class="container-debug">
+        EBUG
       <img src=./img/reference-small.png alt="immagine di debug">
-    </div>
+    </div> -->
     <!-- /Container debug -->
 
   </body>
