risolto problema barra scorrimento orizzontale inserita animazione sfondo al passaggio mouse

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
           <!-- /Nome città sovraimpressione -->
           <!-- layer scuro in sovraimpressione -->
           <div class="layer-transparent">
-            sono il layer trasparente
           </div>
           <!-- /layer scuro in sovraimpressione -->
         </div>
@@ -32,7 +31,7 @@
 
         <!-- Container city -->
         <div class="container-city">
-          <img class="img-city" src="./img/roma2.jpg" alt="Immagine Roma">
+          <img class="img-city" src="./img/copenhagen.jpg" alt="Immagine Roma">
           <!-- Nome città sovraimpressione -->
           <div class="badge">
             <!-- ROMA -->
@@ -47,7 +46,7 @@
         <!-- /Container city -->
         <!-- Container city -->
         <div class="container-city">
-          <img class="img-city" src="./img/roma3.jpg" alt="Immagine Roma">
+          <img class="img-city" src="./img/tokyo.jpg" alt="Immagine Roma">
           <!-- Nome città sovraimpressione -->
           <div class="badge">
             <!-- ROMA -->
@@ -61,16 +60,17 @@
         </div>
         <!-- /Container city -->
 
-    </div>
+      </div>
+      <!-- Container all cities -->
 
-    </div>
+    <!-- </div> -->
     <!-- /Container content -->
 
     <!-- Container debug -->
-    <!-- <div class="container-debug">
+    <div class="container-debug">
         EBUG
       <img src=./img/reference-small.png alt="immagine di debug">
-    </div> -->
+    </div>
     <!-- /Container debug -->
 
   </body>
