--- a/index.html
+++ b/index.html
@@ -5,60 +5,72 @@
 
     <!-- Link al CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- /Link al CSS -->
+
+    <!-- Font personalizzato -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@900&display=swap" rel="stylesheet">
 
     <title>Airbnb clone</title>
   </head>
   <body>
 
     <!-- Container content -->
-    <div class="container-content">
+    <!-- <div class="container-content"> -->
       <div class="container-all-cities">
         <!-- Container city -->
         <div class="container-city">
+
+          <!-- Immagine città -->
           <img class="img-city" src="./img/roma.jpg" alt="Immagine Roma">
+
           <!-- Nome città sovraimpressione -->
           <div class="badge">
             <span> ROMA </span>
           </div>
           <!-- /Nome città sovraimpressione -->
+
           <!-- layer scuro in sovraimpressione -->
-          <div class="layer-transparent">
-          </div>
-          <!-- /layer scuro in sovraimpressione -->
+          <div class="layer-transparent"></div>
+
         </div>
         <!-- /Container city -->
 
         <!-- Container city -->
         <div class="container-city">
+
+          <!-- Immagine città -->
           <img class="img-city" src="./img/copenhagen.jpg" alt="Immagine Roma">
+
           <!-- Nome città sovraimpressione -->
           <div class="badge">
-            <!-- ROMA -->
+            <span> COPENHAGEN </span>
           </div>
           <!-- /Nome città sovraimpressione -->
-          <!-- layer scuro in sovraimpressione -->
-          <div class="layer-transparent">
 
-          </div>
-          <!-- /layer scuro in sovraimpressione -->
+          <!-- layer scuro in sovraimpressione -->
+          <div class="layer-transparent"></div>
+
         </div>
         <!-- /Container city -->
+
         <!-- Container city -->
         <div class="container-city">
+
+          <!-- Immagine città -->
           <img class="img-city" src="./img/tokyo.jpg" alt="Immagine Roma">
+
           <!-- Nome città sovraimpressione -->
           <div class="badge">
-            <!-- ROMA -->
+            <span> TOKYO </span>
           </div>
           <!-- /Nome città sovraimpressione -->
-          <!-- layer scuro in sovraimpressione -->
-          <div class="layer-transparent">
 
-          </div>
-          <!-- /layer scuro in sovraimpressione -->
+          <!-- layer scuro in sovraimpressione -->
+          <div class="layer-transparent"></div>
+
         </div>
         <!-- /Container city -->
+
+
 
       </div>
       <!-- Container all cities -->
@@ -66,12 +78,6 @@
     <!-- </div> -->
     <!-- /Container content -->
 
-    <!-- Container debug -->
-    <div class="container-debug">
-        EBUG
-      <img src=./img/reference-small.png alt="immagine di debug">
-    </div>
-    <!-- /Container debug -->
 
   </body>
 </html>
