inserito header fixed

--- a/index-bonus.html
+++ b/index-bonus.html
@@ -12,17 +12,32 @@
     <title>Airbnb clone</title>
   </head>
   <body>
+    <!-- Header fixed con navBar -->
+    <header>
+      <div class="header-block">
+        <!-- Navigation bar -->
+        <div class="navbar">
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>Chi siamo</li>
+              <li>Contatti</li>
+              <li>FAQ</li>
+              <li>Curiosità</li>
+          </nav>
+        </div>
+        <!-- /Navigation bar -->
+      </div>
+    </header>
+    <!-- /Header fixed con navBar-->
 
     <!-- Container content -->
     <div class="container-content">
 
-      <!-- Header con navBar -->
-      <header>
-        <div class="header-block">
-          CIAO SONO IL BLOCCO CON LA NAV bar
-        </div>
-      </header>
-      <!-- /Header con navBar-->
+      <!-- Occupa spazio sotto all'header fixed -->
+      <div class="header-placeholder">
+        <span> &hearts;</span> <!-- da sostituire -->
+      </div>
 
       <div class="container-all-cities">
         <!-- Container city -->
